# multiAgentPlatform

./: .dockerignore  .gitignore  docker-compose.yml  main.py  nginx.conf  pyproject.toml  test.py  testmain.py
broker_app/: main.py
broker_app/application/: broker_service.py
broker_app/infrastructure/: mcp_client.py
multi_agent_platform/: Dockerfile  README.md  requirements.txt
multi_agent_platform/orchestration_app/: main.py
multi_agent_platform/orchestration_app/api/: dependencies.py  orchestration_router.py
multi_agent_platform/orchestration_app/application/: InitializeService.py  (+3 more)
multi_agent_platform/plugin/: agent_config.json  orchestrator_config.json
orchestration_app/: container.py  main.py  test_json.py
orchestration_app/api/: dependencies.py  orchestration_router.py
orchestration_app/application/: AgentFactory.py  OrchestratorBuilder.py  PluginLoader.py  PluginManager.py  SetupAgentSystem.py  TotalRegistry.py  agentExecutor.py  container.py  orchestrationService.py  orchestration_execution_strategy_factory.py  orchestration_service.py  resume_service.py  setup_agent_system.py
orchestration_app/file_watcher_system/: FileWatcher.py
orchestration_app/infrastructure/: FileWatcher.py  broker_client.py
orchestration_app/shared/: exceptions.py
plugin/: agent_config.json  orchestrator_config.json
plugin/builder/: ReactAgentBuilder.py  SupervisorAgentBuilder.py  SupervisorOrchestrationBuilder.py
plugin/llm/: gpt-4o-mini.py  gpt-4o.py
plugin/tool/: interrupt.py  research_tool.py  search_urls.py  web_search.py
temp/0502v/: container.py
(+105 files in other folders)
